test/fail_compilation/fail138.d
// REQUIRED_ARGS: -d

typedef int T = void;

void main(){
   T x = void;
   x = x.init;
}

